<resources>
    <string name="app_name">Manageit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_total_income">Total Income</string>
    <string name="text_total_expense">Total Expense</string>
    <string name="text_total_balance">Total Balance</string>
    <string name="text_recent_transactions">Recent Transactions</string>
    <string name="text_transaction_empty_title">No Transaction Yet!</string>
    <string name="text_transaction_empty_desc">After your first transaction you will be able to view it here</string>
    <string name="title_addtransaction">Title</string>
    <string name="amount_addtransaction">Amount</string>
    <string name="transaction_type_addtransaction">Transaction_Type</string>
    <string name="transaction_tag_addtransaction">Transaction Tag</string>
    <string name="transaction_date_addtransaction">Transaction Date</string>
    <string name="transaction_note_addtransaction">Transaction Note</string>
    <string name="amount">Amount</string>
    <string name="text_expense_when">When</string>
    <string name="text_expense_amount">Amount</string>
    <string name="text_expense_transaction_type">Transaction type</string>
    <string name="text_expense_tag">Tag</string>
    <string name="text_expense_note">Note</string>
    <string name="text_expense_add_transaction">Save Transaction</string>
    <string name="text_createdAt">Created At</string>
    <!-- Snack Bar -->
    <string name="success_login">Login successfully</string>
    <string name="success_signup">Sign Up successfully</string>
    <string name="success_logout">Logged Out</string>
    <string name="success_expense_saved">Transaction saved successfully</string>
    <string name="success_transaction_delete">Transaction deleted successfully!</string>
    <string name="success_load_data">Data loaded successfully!</string>
    <!-- share transaction -->
    <string name="share_message">\%s \nAmount: %s, \nTransaction-Type: %s, \nTag: %s, \nDate: %s, \nNote: %s \n</string>
    <!--  About -->
    <string name="text_about_license_title"><![CDATA[Attributions & Version]]></string>
    <string name="text_about_license">Manageit Version 1.0</string>
    <string name="text_about_team">Team</string>
    <string name="member_of_team">Muhammad Zikrurridho Afwani</string>
    <string name="member_of_team2">Yuniar Islamiati</string>
    <string name="member_of_team3">Baiq Ashfiatun Nisa Mulyani</string>
</resources>
